--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
+    "jest-mock-random": "^1.0.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
