--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "js-dice-codes",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A JS library for parsing dice codes and executing them",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "test": "jest --coverage --runInBand",
     "test:watch": "jest --coverage --runInBand --watch",
